# NHInsight

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  README.md  action.yml  pyproject.toml
.github/workflows/: build.yml  check.yml  ci.yml  release.yml
nhinsight/: __init__.py  cli.py
nhinsight/analyzers/: attack_paths.py  graph.py  workflow_scanner.py
nhinsight/core/: mermaid.py  output.py
nhinsight/providers/: azure.py
tests/: test_cli.py  test_mermaid.py  test_workflow_scanner.py
